# BI_2021_JB_benchmark

./: DistMult.py  NFM.py  README.md  building_own_benchmark.ipynb  datasets.py  main.py  model_and_preprocess_selection.py  pybiomed_helper.py  pyproject.toml  trivec_model.py  utils.py
config/: config.yaml
config/dataset/: Davis.yaml  dtiMinor.yaml
config/model/: CPI_2018.yaml  DTI_GAT_2020.yaml  DistMult.yaml  MHSADTI_2021.yaml  MolTrans_2020.yaml  NFM.yaml
datasets/: DTI_dataset.py  DtiDataset.py  datasetWithLabelEncoder.py  datasets.py  davisDataset.py  dtiMinorDataset.py
models/: BaseModel.py  CPI_2018_model.py  CPI_prediction_2018_model.py  CompoundProteinInteractionPrediction2018.py  DTi_GAT_2020_model.py  DistMult.py  KGE_models.py  MHSADTI_2021_model.py  MolTrans_2020_model.py  NFM.py
preprocess/: CPI_2018_preprocess.py  CPI_prediction_2018_preprocess.py  MHSADTI_2021_preprocess.py  MolTrans_2020_preprocess.py
utils/: learning_cycle.py  model_and_preprocess_selection.py  select_dataset.py  utils.py
